style.css
body{
    width: 100vw;
    margin: 0;
    font-size: 10px;
    display: flex;
    justify-content: center;
    user-select: none;
}
.title{
    margin-top: 2rem;
    margin-bottom: 1rem;
}
.wrapper{
    display: flex;
    justify-content: center;
    width: 80vw;
    flex-direction: column;
}
.header{
    text-align: center;
}
.checkbox{
    margin-right: 0.5rem;
    /* display: inline-block; */
    justify-self: center;
    align-self: flex-start;
}
.main{
    margin-top: 3rem;
}
.report{
    display: flex;
    flex-direction: row;
    margin: 1rem 0 0 0;
}
.report_item{
    font-size: 1rem;
}
.input-wrapper{
    /* padding-top: 0.65rem; */
}
p{
    font-size: 1rem;
    /* display: none; */
}
/* .report1:hover{
    color: brown;

} */

 /* .wrapper{
    width: 50vw;
    display: flex;
    flex-direction: column;
    align-items: center;
  } */
  .report-name {
    text-align: center;
    width: 100%;
    position: relative;
    display: inline-block;
    
  }
  
  .description {
    visibility: hidden;
    width: 20rem;
    background-color: #555;
    color: #fff;
    text-align: center;
    border-radius: 6px;
    padding: 5px 2px;
    position: absolute;
    z-index: 3;
    top: 125%;
    left: 30%;
    margin-left: -60px;
    opacity: 0;
    transition: opacity 0.5s;
  }
/*  
  .report .description::after {
    content: "";
    position: absolute;
    bottom: 100%;
    left: 35%;
    margin-left: -5px;
    border-width: 5px;
    border-style: solid;
    border-color: transparent transparent #555 transparent;
  }
*/  
.report-name:hover .description {
    visibility: visible;
    opacity: 1;
}
.show-description{
    visibility: visible;
    opacity: 1;
}
.overlay{
    position: fixed;
    display:flex;
    width:100%;
    height:100%;
    justify-content:center;
    align-items:center;
    background:rgba(0,0,0,.7);
    opacity: 0.5;
    z-index: 1;
}
.g-form__input-wrapper_hidden{
    display: none;
}
.textarea{
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
}
.text{
    margin-top: 0.2rem;
}
  
@media screen and (max-width : 420px) {
    .description{
        width: 15rem;
    }
}

